--- a/Z_DS-Algo_BDD/src/test/resources/dsAlgo_Config/Config.properties
+++ b/Z_DS-Algo_BDD/src/test/resources/dsAlgo_Config/Config.properties
@@ -1,6 +1,7 @@
 url=https://dsportalapp.herokuapp.com/
-browser=edge
+browser=chrome
 homePageUrl=https://dsportalapp.herokuapp.com/home
 registerPageUrl=https://dsportalapp.herokuapp.com/register
 username=sdet
 password=sdet1234
+ExceldataPath=src/test/resources/Excel_Register/Linked_listCode.xlsx
